#54 Workspace height UI fixes and scrollbar on right panel

--- a/applications/osb-portal/src/css/main.less
+++ b/applications/osb-portal/src/css/main.less
@@ -1,6 +1,10 @@
 @import (css) url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap");
 @import "variables";
 
+.leftContainer {
+  align-items: flex-start;
+  height: 50% !important;
+}
 .verticalFit {
     overflow: hidden;
     flex: 1;
@@ -8,6 +12,12 @@
     flex-direction: column;
     align-items: stretch;
     min-width: 100%;
+    &.card-container{
+      @media screen and (min-width:960px){
+        max-height: calc(100vh - 80px);
+        padding-bottom: 8vh;
+      }
+    }
 }
 
 .scrollbarStyle {
